--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.13.2",
+    "axios": "^1.6.7",
+    "cloudinary": "^2.0.0",
     "firebase": "^10.7.2",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
